# caption-inator

./: .gitignore  Makefile  README.md
frontend/: Cargo.toml  Trunk.toml  index.html
frontend/.cargo/: config.toml
frontend/src/: controls.rs  main.rs
server/: Cargo.toml  config.toml.example
server/.cargo/: config.toml
server/maintainer-scripts/: caption.service
server/src/: config.rs  listener.rs  main.rs  replay.rs  server.rs  test-data.txt
