[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-util = "0.3.30"
gloo = { version = "0.11.0", features = ["net"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
wasm-bindgen = "0.2.93"
wasm-bindgen-futures = "0.4.43"
web-sys = { version = "0.3.70", features = [
	"Screen",
	"Window",
	"HtmlSelectElement",
] }
yew = { version = "0.21.0", features = ["csr"] }
