[package]
name = "server"
version = "0.1.0"
edition = "2021"
authors = ["David Young"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
axum = { version = "0.7.5", features = ["ws"] }
azure-speech = "0.2.3"
clap = { version = "4.5.17", features = ["derive"] }
color-eyre = "0.6.3"
native-tls = { version = "0.2.12", features = ["vendored"] }
openssl = { version = "0.10.70", features = ["vendored"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.36.0", features = ["full"] }
tokio-stream = "0.1.16"
toml = "0.8.19"
tower-http = { version = "0.5.2", features = ["fs"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[package.metadata.deb]
assets = [
	["target/release/server", "/usr/bin/caption-server", "755"],
	["../frontend/dist/*", "/var/www/captions/", "644"],
	["config.toml.example", "/etc/caption.toml", "644"],
]
maintainer-scripts = "maintainer-scripts/"
systemd-units = [
	{ unit-name = "caption", enable = false, start = false },
]
depends = ["libc6:armhf (>= 2.31)"]
